--- a/block-BJaajw/code/index.html
+++ b/block-BJaajw/code/index.html
@@ -13,11 +13,16 @@
             <h1>Space News EveryWhere</h1>
         </header>
 
-        <div class="options">
-            <select name="" id="" >
-                <option value="">select new source</option>
-            </select>
+        <div class="error_message"></div>
+
+        <div class="main">
+            <div class="options">
+                <select name="" id="" >
+                    <option value="">select new source</option>
+                </select>
+            </div>
         </div>
+      
         
         <ul class="news"></ul>
 
